--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
 	"devDependencies": {
 		"@wordpress/eslint-plugin": "^3.1.0",
 		"@wordpress/scripts": "^5.1.0",
-		"classnames": "^2.2.6",
-		"eslint-plugin-eslint-comments": "^3.1.2",
-		"eslint-plugin-import": "^2.18.2",
-		"prettier": "^1.19.1",
-		"prettierrc": "^0.0.0-5"
+		"classnames": "^2.2.6"
 	},
 	"scripts": {
 		"start": "wp-scripts start",
