--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-	"name": "mkaz-test-block",
+	"name": "gutenpride",
 	"version": "0.1.0",
-	"main": "src/index.js",
-	"devDependencies": {
-		"@wordpress/eslint-plugin": "^3.1.0",
-		"@wordpress/scripts": "^6.1.1",
-		"classnames": "^2.2.6"
-	},
+	"description": "Example block written with ESNext standard and JSX support – build step required.",
+	"author": "The WordPress Contributors",
+	"license": "GPL-2.0-or-later",
+	"main": "build/index.js",
 	"scripts": {
-		"start": "wp-scripts start",
 		"build": "wp-scripts build",
-		"lint-js": "wp-scripts lint-js"
+		"format:js": "wp-scripts format-js",
+		"lint:css": "wp-scripts lint-style",
+		"lint:js": "wp-scripts lint-js",
+		"start": "wp-scripts start",
+		"packages-update": "wp-scripts packages-update"
+	},
+	"devDependencies": {
+		"@wordpress/scripts": "^12.1.1"
 	}
 }
